src/test/resources/semantic/custom/accept/subtractExpression.ul
void main() {
}

boolean foo() {
    int result1;
    float result2;
    char result3;

    result1 = 5 - 6;
    result1 = 0 - 5;

    result2 = 5.0 - 1.1;

    return ('c' - 'd') == 'e' == false;
}
