src/test/resources/semantic/custom/reject/elseStatementArrayType.ul
void main() {
}

void foo() {
    int[5] array;

    if (array) {
    } else {
    }
}
